--- a/package.json
+++ b/package.json
@@ -44,32 +44,38 @@
     "@nestjs/common": "^6.2.4",
     "@nestjs/core": "^6.2.4",
     "@nestjs/platform-express": "^6.2.4",
-    "reflect-metadata": "^0.1.12"
+    "reflect-metadata": "^0.1.12",
+    "@ngrx/store": "8.3.0",
+    "@ngrx/effects": "8.3.0",
+    "@ngrx/entity": "8.3.0",
+    "@ngrx/router-store": "8.3.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.803.3",
     "@angular/cli": "8.3.3",
-    "@nrwl/workspace": "8.6.0",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "eslint": "6.1.0",
-    "typescript": "~3.4.5",
-    "prettier": "1.18.2",
     "@angular/compiler-cli": "^8.2.0",
     "@angular/language-service": "^8.2.0",
-    "@angular-devkit/build-angular": "^0.803.3",
-    "codelyzer": "~5.0.1",
-    "jest-preset-angular": "7.0.0",
-    "@nrwl/jest": "8.6.0",
-    "jest": "24.1.0",
-    "@types/jest": "24.0.9",
-    "ts-jest": "24.0.0",
-    "cypress": "3.4.1",
-    "@nrwl/cypress": "8.6.0",
-    "@nrwl/node": "8.6.0",
     "@nestjs/schematics": "^6.3.0",
     "@nestjs/testing": "^6.2.4",
-    "@nrwl/nest": "8.6.0"
+    "@ngrx/schematics": "8.3.0",
+    "@ngrx/store-devtools": "8.3.0",
+    "@nrwl/cypress": "8.6.0",
+    "@nrwl/jest": "8.6.0",
+    "@nrwl/nest": "8.6.0",
+    "@nrwl/node": "8.6.0",
+    "@nrwl/workspace": "8.6.0",
+    "@types/jest": "24.0.9",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~5.0.1",
+    "cypress": "3.4.1",
+    "dotenv": "6.2.0",
+    "eslint": "6.1.0",
+    "jest": "24.1.0",
+    "jest-preset-angular": "7.1.1",
+    "prettier": "1.18.2",
+    "ts-jest": "24.0.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.4.5"
   }
 }
